# crypto-rank-tracker

./: .gitignore  CHANGELOG.md  README.md  config.py  main.py  pyproject.toml  replay_upbit.py  update_sectors.py
.devcontainer/: Dockerfile.devcontainer-check  devcontainer.json
.github/workflows/: deploy.yaml  updaet-sectors.yaml
.repometa/: policy.json
common/: analysis.py  attention.py  attention_policy.py  baseline_model.py  event_log.py  execution.py  feature_approval.py  models.py  notifier.py  outcomes.py  replay.py  residuals.py  sector_loader.py  shadow_promotion.py  state_manager.py  storage_client.py  threshold_selection.py  time_validation.py  upbit_client.py
common/analysis/: deep_dive.py  scanner.py  utils.py
common/model_artifacts/: ridge_early_bonus_0p3.json
common/notification/: engine.py  formatter.py  main.py
common/signals/: detector.py
tests/: conftest.py  test_alert_engine_cooldown.py  test_alert_engine_state_machine.py  test_attention.py  test_attention_policy.py  test_baseline_model.py  test_config_validation.py  test_deploy_workflow.py  test_event_log.py  test_execution_gate.py  test_feature_approval.py  test_idempotency.py  test_main_entrypoint.py  test_market_regime.py  test_notification_formatter.py  test_outcomes.py  test_packaging_smoke.py  test_price_surprise_candidates.py  test_rank_state_persistence.py  test_replay.py  test_residual_momentum.py  test_sector_collisions.py  test_sector_identities.py  test_sector_map_validation.py  test_shadow_promotion.py  test_signal_detection_edge_cases.py  test_storage_failures.py  test_threshold_selection.py  test_time_validation.py  test_upbit_client.py  test_update_sectors_failures.py  test_verification_isolation.py  test_volume_anomalies.py
