[project]
name = "crypto-rank-tracker"
version = "0.2.1"
description = ""
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "aiohttp>=3.12.13,<4.0.0",
  "google-cloud-storage>=3.1.1,<4.0.0",
  "aiofiles>=24.1.0,<25.0.0",
  "tenacity>=9.1.2,<10.0.0",
  "pydantic>=2.11.7,<3.0.0",
  "numpy>=2.0,<2.3",
  "tqdm>=4.67.1,<5.0.0",
  "functions-framework>=3.9.2,<4.0.0",
  "aiolimiter>=1.2.1,<2.0.0",
  "pandas>=2.3.3,<3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
