[project]
name = "crypto-rank-tracker"
version = "0.3.0"
description = ""
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "aiohttp>=3.12.13,<4.0.0",
  "google-cloud-storage>=3.1.1,<4.0.0",
  "aiofiles>=24.1.0,<25.0.0",
  "pydantic>=2.11.7,<3.0.0",
  "numpy>=2.0,<2.3",
  "tqdm>=4.67.1,<5.0.0",
  "functions-framework>=3.9.2,<4.0.0",
  "aiolimiter>=1.2.1,<2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["common"]
artifacts = ["main.py", "config.py", "update_sectors.py"]
include = ["common/**", "main.py", "config.py", "update_sectors.py"]
force-include = {"main.py" = "main.py", "config.py" = "config.py", "update_sectors.py" = "update_sectors.py"}

[dependency-groups]
dev = [
  "pytest>=9.0.3",
  "ruff>=0.15.21,<0.16.0",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B"]

[tool.uv]
default-groups = ["dev"]

[tool.hatch.build.targets.sdist]
include = ["main.py", "config.py", "update_sectors.py", "common/**", "tests/**"]
